<resources>
    <string name="app_name">Go Corona Go!</string>
    <string name="title_activity_about_section">About Me</string>
    <string name="whywashhands">Washing hands with alcohol based sanitizer or soap kills viruses. Specifically talking about soaps, soaps are good at removing grease. Novel coronavirus basically has a fatty layer around itself. When soaps are applied, that greasy membrane is destroyed and the virus becomes unable to infect.
</string>
    <string name="whyrespiratoryhygiene" formatted="false">Corona is meant to spread via droplets. Thus if you maintain respiratory hygiene, then you create a big difference by blocking the chain of infection.
</string>
    <string name="whynottouchhands" formatted="false">The reason behind this is that eyes, mouth and nose are the entry point of viruses to enter our body. Thus touching them may result viruses to go inside if unluckily you have some of them over your body.
</string>
    <string name="whysneezeonelbow" formatted="false">A very trivial reason as you can guess, sneezing in the way we usually do actually puts up a lot of viruses over our hands. Now since we use our hands everywhere, we transmit them all over not only on many surfaces, but also to others while touching them. That is why it is said to avoid contact with others specially handshakes because by doing so you pass the germs to other individuals too.
</string>
    <string name="whymask" formatted="false">"Another very trivial reason as you may be able to guess, but with a bit of scientific touch. A person infected with coronavirus — even one with no symptoms — may emit aerosols when they talk or breathe. Aerosols are infectious viral particles that can float or drift around in the air. Another person can breathe in these aerosols and become infected with the virus. A mask can help prevent that to happen. An article published in NEJM in March reported that aerosolized coronavirus could remain in the air for up to three hours.\n\n"
"So then what kind of mask should you wear? Because of the short supply, people without symptoms or without exposure to someone known to be infected with the coronavirus can wear a cloth face covering over their nose and mouth."
</string>
    <string name="lastreason" formatted="false">"Lastly never trust any messages without checking. Try to check their validity on the internet. Neither create fake news nor share it. If you feel that a message is fake , there are pretty high chances that it is actually fake. Never trust or share any messages without verification. Also take care that you take all the necessary steps to prevent the infection. It is high time that we socially engineer ourselves to prevent any mishap. Take a pledge that neither you would get infected nor would infect others.\n\n"
"So lets do our very best and make our world corona free!!\n\n\n"</string>
    <string name="social1" formatted="false">
"Social distancing is really the core of this section and this is very necessary to understand that why we need to follow it.\n\n"
"The entire world are going through lockdowns. Many nations have fought out this battle with the help of social distancing only. Let us try to find out why.\n\n"
"Firstly this virus doesn\'t spread via air. This has been the biggest plus for all of us as absence of such means of transmission actually slows down the transmission and brings the consequence under our very own hands. The virus is meant to spread via human transmission. Thus if you stay away from people and don\'t go out, you are actually pretty safe.\n\n"
"There is a parameter which is called as the reproductive number R0 which tells on average how many persons on average you may infect if you have a virus. Studies are not yet enough but the estimation is it is between 2 and 3. However many researches say that it may be even higher.\n\n "
"There is another pretty interesting parameter that you may get to know here. There is a very interesting pattern that has been figured out. More the reprodcutive number of the virus the less is the mortality rate. For example the mortality rate of Rabies is 100% as per studies if you don't get it treated. Ebola has a 40% mortality rate. But these don't transmit as easily as seasonal flu which has a mortality rate of only 0.01%. For your knowledge it is been found that the R0 for seasona flu is around 6. Hence you can see more easily the virus spreads the lesser the dangerous it is.\n\n"
</string>
    <string name="social2" formatted="false">"However the more nasty ones are the ones with a moderate mortality rate. These spread across easily and also are dangerous. SARS (Severe Acute Respiratory syndrome) has a mortality rate of around 10%.It was a huge problem that China and South Korea faced. They were the ones bashed in 2003 for poor preparations. This is the reason why they have been pretty pro active and tackled the situation better than the other nations.\n\n"
"Knowing all of this, we can see that COVID-19 spreads fast. Even considering that there are only 2% deaths across the world due to it, and supposing we are lucky and only half of the people are affected without any lockdowns and carrying on our daily activities, we get an approx number of around 77 million (7.7 crore) deaths!! Surely that would be a huge blow to world\'s economy as there would be lesser consumers as well as producers. Also our healthcare systems are not even compatible for number of dying people, let alone the total infected ones.\n\n"
"So what can be done is to create social distancing. Since the virus spreads only by human to human transmission, hence creating a distance among the people (not ideologically!!) is necessary. We can significantly reduce the number of patients by performing social distancing.\n\n"
"But one may argue - Going out completely is unavoidable. There is a chance that I may get infected. So what's the use if I am getting infected anyways? Well there is.\n\n"
"When there are lesser people out, the lesser is the chance that there is one infected among them. Also if by chance someone is infected amongst them, he or she would infect lesser people. Those lesser people if maintain distancing at home, maybe they won't affect all of their family members. Considering this practice by all, this reduces the number of infections significantly.\n\n"
</string>
    <string name="social3">"The basic idea is the concept of \'Flattening the curve\'. If the number of cases rise quickly, our health care systems would not be able to handle them as the number of cases would be higher than the healthcare capacity. Also if the number of cases are high, there would be high chances that the doctors and nurses too get infected hence reducing the capacity of our healthcare system further.\n\n"
"However if we convert this into a slow pandemic, then everyone would get a chance to be treated. The older cases would recover and go back creating room for the newer patients to seek medical assistance. Hence there would be higher chance that everyone gets a chance to be treated hence, not overburdening our healthcare system.\n\n"
"Hence it is a request to stay at home, neither get infected, nor infect others.\n\n"
</string>
    <string name="site1" formatted="false">
        <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/advice-for-public/myth-busters">https://www.who.int/emergencies/diseases/novel-coronavirus-2019/advice-for-public/myth-busters</a>
    </string>
    <string name="site2" formatted="false">
        <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/advice-for-public">https://www.who.int/emergencies/diseases/novel-coronavirus-2019/advice-for-public</a>
    </string>
    <string name="site3" formatted="false">
        <a href="https://www.who.int/news-room/q-a-detail/q-a-coronaviruses">https://www.who.int/news-room/q-a-detail/q-a-coronaviruses</a>
    </string>
    <string name="youtube1" formatted="false">
        <a href="https://www.youtube.com/watch?v=xnkQUgamT_k">Dhruv Rathee\'s video on \'Coronavirus explained by Dhruv Rathee\'</a>
    </string>
    <string name="youtube2">
        <a href="https://www.youtube.com/watch?v=BtN-goy9VOY&amp;t=206s">\'The Coronavirus Explained &amp; What You Should Do\' by Kurzgesagt – In a Nutshell</a>
    </string>
    <string name="youtube3">
        <a href="https://www.youtube.com/watch?v=jgGdQkXJENA">\'What is a Coronavirus?\' by It\'s Aumsum Time</a>
    </string>
    <string name="site4" formatted="false">
        <a href="https://scopeblog.stanford.edu/2020/04/02/whats-a-virus-anyway-part-1-the-bare-bones-basics/">https://scopeblog.stanford.edu/2020/04/02/whats-a-virus-anyway-part-1-the-bare-bones-basics/</a>
    </string>
    <string name="site5" formatted="false">
        <a href="https://www.nature.com/scitable/definition/virus-308/">https://www.nature.com/scitable/definition/virus-308/</a>
    </string>
    <string name="site6" formatted="false">
        <a href="https://www.health.harvard.edu/diseases-and-conditions/preventing-the-spread-of-the-coronavirus">https://www.health.harvard.edu/diseases-and-conditions/preventing-the-spread-of-the-coronavirus</a>
    </string>
    <string name="site7" formatted="false">
        <a href="https://www.health.harvard.edu/diseases-and-conditions/coronavirus-resource-center">https://www.health.harvard.edu/diseases-and-conditions/coronavirus-resource-center</a>
    </string>
    <string name="site8" formatted="false">
        <a href="https://www.health.harvard.edu/diseases-and-conditions/coping-with-coronavirus">https://www.health.harvard.edu/diseases-and-conditions/coping-with-coronavirus</a>
    </string>
    <string name="youtube4">
        <a href="https://www.youtube.com/watch?v=TGxjE82HMjM">Soch\'s video on \'Coronavirus in India: 5 things you need to know about the virus\'\n\n</a>
    </string>
</resources>