<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SourcesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView69"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Sources used for reference in this app-"
                android:fontFamily="serif"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView70"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/site1"
                android:autoLink="web"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView71"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/site2"
                android:autoLink="web"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView72"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/site3"
                android:autoLink="web"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView73"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/youtube2"
                android:tag="1"
                android:onClick="openYoutube"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView74"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/youtube1"
                android:tag="2"
                android:onClick="openYoutube"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView75"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:tag="3"
                android:onClick="openYoutube"
                android:text="@string/youtube3"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView76"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/site4"
                android:autoLink="web"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView77"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/site5"
                android:autoLink="web"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView78"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/site6"
                android:autoLink="web"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView79"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/site7"
                android:autoLink="web"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView80"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/site8"
                android:autoLink="web"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView81"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/youtube4"
                android:tag="4"
                android:onClick="openYoutube"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>