<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WhySafetyTips">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="5dp"
                android:text="Why follow the safety tips?"
                android:textSize="25dp"
                app:fontFamily="sans-serif-black" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="30dp"
                android:text="Well we may know various tips that are helpful in fighting the corona disease but, why? Why to follow those tips? Let's figure this out in this section."
                android:textSize="18dp"
                app:fontFamily="sans-serif-condensed-medium" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="30dp"
                android:text="1. Wash your hands with soap or alcohol based sanitizer"
                android:textSize="22dp"
                app:fontFamily="sans-serif-black" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/whywashhands"
                android:textSize="18dp"
                app:fontFamily="sans-serif-condensed-medium" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="30dp"
                android:text="2. Maintain respiratory hygiene"
                android:textSize="22dp"
                app:fontFamily="sans-serif-black" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/whyrespiratoryhygiene"
                android:textSize="18dp"
                app:fontFamily="sans-serif-condensed-medium" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="30dp"
                android:text="3. Maintain social distancing"
                android:textSize="22dp"
                app:fontFamily="sans-serif-black" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/social1"
                android:textSize="18dp"
                app:fontFamily="sans-serif-condensed-medium" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:scaleX="1.2"
                android:scaleY="1.5"
                app:srcCompat="@drawable/chart" />

            <TextView
                android:id="@+id/textView36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="60dp"
                android:text="@string/social2"
                android:textSize="18dp"
                app:fontFamily="sans-serif-condensed-medium" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/social3"
                android:textSize="18dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:fontFamily="sans-serif-condensed-medium" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginTop="40dp"
                android:scaleX="1.2"
                android:scaleY="1.8"
                app:srcCompat="@drawable/pandemic" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="80dp"
                android:text="4. Avoid touching your eyes ,nose and mouth"
                android:textSize="22dp"
                app:fontFamily="sans-serif-black" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/whynottouchhands"
                android:textSize="18dp"
                app:fontFamily="sans-serif-condensed-medium" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="30dp"
                android:text="5. Sneeze at your elbow not your hands"
                android:textSize="22dp"
                app:fontFamily="sans-serif-black" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/whysneezeonelbow"
                android:textSize="18dp"
                app:fontFamily="sans-serif-condensed-medium" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="30dp"
                android:text="6. If it's necessary to go out, then please cover your face with a cloth or a mask"
                android:textSize="22dp"
                app:fontFamily="sans-serif-black" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/whymask"
                android:textSize="18dp"
                app:fontFamily="sans-serif-condensed-medium" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="30dp"
                android:text="7. Last but not the least, don't spread rumours,don't believe in them either, check everything on the internet and stay cautious"
                android:textSize="22dp"
                app:fontFamily="sans-serif-black" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/lastreason"
                android:textSize="18dp"
                app:fontFamily="sans-serif-condensed-medium" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>